cmake_minimum_required(VERSION 3.2)

project(ImGUI)

file(GLOB_RECURSE SOURCE_CPP RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp  )
file(GLOB_RECURSE SOURCE_HEADER RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} .h  )

add_library(${PROJECT_NAME} SHARED ${SOURCE_CPP} ${SOURCE_HEADER})

install(FILES ${SOURCE_HEADER} DESTINATION include)
install(TARGETS ${PROJECT_NAME} DESTINATION lib)
